Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/cast/6932571/T6932571neg.out
T6932571neg.java:16:19: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: T6932571neg.S, G)
1 error
